[package]
name = "mio_tcp_loop"
version = "0.1.0"
authors = ["fx_kirin <fx.kirin@gmail.com>"]
edition = "2018"
description = "mio TcpStream Thread."
license = "MIT"

[lib]
name = "mio_tcp_loop"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.6.22"
mio-extras = "2.0.6"
anyhow = "1.0.31"
log = "0.4.8"
kaniexpect = "0.1.3"
